service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forecast
  annotations:
    icks.io_istio_workload_version: "v1"
  labels:
    app: forecast
    service: forecast
spec:
  ports:
  - port: 3022
    name: http
  selector:
    app: forecast
